# ng_parser

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
ng_parser/: __init__.py  command.py  log_formatter.py  parser.py  proxy_service.py  repository.py  task_queue.py
ng_parser/algorithm/: __init__.py  async_coroutine_parser.py  async_parser.py
ng_parser/client/: __init__.py  http_client.py  http_proxy.py  httpx_client.py  proxy.py  proxy_service.py
ng_parser/queue/: __init__.py  async_queue.py
test/: conftest.py  fixture.py  test_command.py  test_log_formatter.py  test_proxy.py  test_repository.py  utils.py
test/algorithm/: test_async_coroutine_parser.py  test_async_parser.py
test/client/: test_http_client.py  test_http_proxy.py  test_httpx_client.py  test_proxy.py
