[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ng_parser"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "httpx[http2]>=0.27",
    "selectolax>=0.3.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ng_parser*"]
